# SentrixDataEngine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: multi_device_benchmark.py
configs/: qa_thresholds.yaml
configs/dataset_profiles/: full_export.yaml  lerobot_v3.yaml
docs/: CANONICAL_SCHEMA.md  MULTI_DEVICE_VALIDATION.md  SENTRIX_ECOSYSTEM_GUIDE.md  USER_GUIDE.md
src/sentrixdataengine/: __init__.py  cli.py  contracts.py  pipeline.py
src/sentrixdataengine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sentrixdataengine/exporters/: __init__.py  base.py  derived.py  hdf5.py  lerobot.py  mcap.py  parquet.py  rlds.py
src/sentrixdataengine/hooks/: __init__.py  authorize.py  watermark.py
src/sentrixdataengine/inspect/: __init__.py  diff.py  summary.py
src/sentrixdataengine/materialize/: __init__.py  canonical.py  confidence.py  projector.py  silver_writer.py  subframe.py
src/sentrixdataengine/package/: __init__.py  datacard.py  layout.py  manifest.py  provenance.py  versioning.py
src/sentrixdataengine/resolve/: __init__.py  mcap_resolver.py  parquet_resolver.py  resolver.py
src/sentrixdataengine/validate/: __init__.py  confidence_check.py  (+4 more)
tests/: conftest.py  test_cli_materialize.py  test_derived_exporter.py  test_exporters_v2.py  test_inspect.py  test_mcap_resolver.py  test_multi_device.py  test_pipeline_e2e.py  test_projector.py  test_provenance.py  test_release_gate.py  test_resolver.py  test_resolver_topology.py  test_subframe.py  test_topology_provenance.py
